--- a/templates/casting/additional_info.html
+++ b/templates/casting/additional_info.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Información Adicional | Cuban Groove{% endblock title %}
+{% block title %}<title>Información Adicional | Cuban Groove</title>{% endblock title %}
+
 
 {% block content %}
 
