--- a/templates/content_site/faq.html
+++ b/templates/content_site/faq.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Preguntas Frecuentes | Cuban Groove | Clases de Baile{% endblock title %}
+{% block title %}<title>Preguntas Frecuentes | Cuban Groove | Clases de Baile</title>{% endblock title %}
 {% block extrahead %}
 <script type="application/ld+json">
     {
