--- a/templates/instructors/instructors.html
+++ b/templates/instructors/instructors.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Luxe Coronado | Cuban Groove | Clases de Baile {% endblock title %}
+{% block title %}<title>Luxe Coronado | Cuban Groove | Clases de Baile</title>{% endblock title %}
+
 
 {% block content %}
     <!-- About Start -->
