--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}{{ post.title }}{% endblock title %}
+{% block title %}<title>{{ post.title }}</title>{% endblock title %}
 {% block meta_description %}
     <meta name="description" content="{{ post.title }}">
 {% endblock meta_description %}
