--- a/templates/casting/basic_info.html
+++ b/templates/casting/basic_info.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Registro para el Casting | Cuban Groove{% endblock title %}
+{% block title %}<title>Registro para el Casting | Cuban Groove</title>{% endblock title %}
 
 {% block content %}
 
