--- a/templates/casting/thank_you.html
+++ b/templates/casting/thank_you.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Gracias | Cuban Groove{% endblock title %}
+{% block title %}<title>Gracias | Cuban Groove</title>{% endblock title %}
 
 {% block content %}
 
