--- a/templates/content_site/invitated.html
+++ b/templates/content_site/invitated.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Contacto | Cuban Groove | Clases de Baile{% endblock title %}
+{% block title %}<title>Contacto | Cuban Groove | Clases de Baile</title>{% endblock title %}
 
 {% block content %}
 
