--- a/templates/content_site/privacy_policies.html
+++ b/templates/content_site/privacy_policies.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Políticas de Privacidad | Cuban Groove | Clases de Baile{% endblock title %}
+{% block title %}<title>Políticas de Privacidad | Cuban Groove | Clases de Baile</title>{% endblock title %}
 
 {% block content %}
 
