--- a/templates/content_site/thankyou.html
+++ b/templates/content_site/thankyou.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Contacto | Cuban Groove | Clases de Baile{% endblock title %}
+{% block title %}<title>Contacto | Cuban Groove | Clases de Baile</title>{% endblock title %}
 
 {% block content %}
 
@@ -39,7 +39,15 @@
                                     <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove" loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
                                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                         <a href="{% url 'courses_detail' course.slug %}" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Probar Clase</a>
+                                        <button type="button"
+                                                class="flex-shrink-0 btn btn-sm btn-warning px-3"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal"
+                                                data-bs-course="{{ course.title }}"
+                                                title="Probar una clase de {{ course.title }}"
+                                                style="border-radius: 0 30px 30px 0;">
+                                            Probar Clase
+                                        </button>
                                     </div>
                                     <div class="infoPrice">
                                         <strong>S/.{{ course.price }}</strong>
