--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Clases de baile en Lima | Salsa, Afro y Técnica para todos los niveles{% endblock title %}
+{% block title %}<title>Clases de baile en Lima | Salsa, Afro y Técnica para todos los niveles</title>{% endblock title %}
 {% block meta_description %}
     <meta name="description" content="Explora nuestras clases de salsa, técnica de danza y ritmos afrocubanos en Lima. Aprende desde cero o mejora tu nivel con Cuban Groove. ¡Inscríbete hoy!">
 {% endblock meta_description %}
@@ -135,7 +135,17 @@
                                     <img class="img-fluid" src="{{ course.image.url }}" alt="Cursos de Salsa" loading="lazy" style="width: 100%; height: 100%; object-fit: cover;">
                                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                         <a href="{% url 'courses_detail' course.slug %}" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Mas</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Probar Clase</a>
+
+                                        <button type="button"
+                                                class="flex-shrink-0 btn btn-sm btn-warning px-3"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal"
+                                                data-bs-course="{{ course.title }}"
+                                                title="Probar una clase de {{ course.title }}"
+                                                style="border-radius: 0 30px 30px 0;">
+                                            Probar Clase
+                                        </button>
+
                                     </div>
                                     <div class="infoPrice">
                                         <strong>S/.{{ course.price }}</strong>
